add date events logging option

--- a/nip-107-2.md
+++ b/nip-107-2.md
@@ -235,7 +235,7 @@ The content of the event is a `JSON` array that contains one or more `state` obj
 An optional `error` field can be added to the `state` object to indicate an error that occurred.
 
 If the data event is a response to an intent event, it should be tagged with the `d` tag pointing to the event id of the intent event.
-If the data event is published spontaneously by the device, it should be tagged with the `d` tag pointing to the `group_id`,
+If the data event is published spontaneously by the device, it should be tagged with the `d` tag pointing to the `group_id` or to a random string if the device wishes to keep a state log.
 
 If the data event is a response to an intent event, it should be encrypted using the same encryption method as the intent event (see [Encryption](#encryption) and [Group Encryption](#group-encryption)), otherwise it should be encrypted using the `group_secret` unless the device is set to be public, in which case it should be transmitted in clear text.
 
