use json schema

--- a/nip-107-2.md
+++ b/nip-107-2.md
@@ -18,7 +18,7 @@ The terms/conditions of IoT software/hardware is horrible. A user should be able
 - `group` - a group of users or devices that can communicate with each other
 - `group_secret` - a pre-shared private key used to encrypt events for a group of users or devices
 - `group_id` - a unique identifier for a group (can be a random string)
-- `input/output template` - a JSON object that defines the structure of the input/output of an action or state
+- `input/output template` - [JSON-schema](https://json-schema.org/) template that defines the structure of the input/output of an action or state
 
 
 ## Nostr IoT Clients
@@ -58,7 +58,7 @@ The admin url should be unique to each device and should be regenerated only whe
 
 The url has this format:
 ```
-nostriot+admin://<admin-privkey>@<device-pubkey>?relay=relay-url&metadata=<optional nip 01 metadata>&template=<template>
+nostriot+admin://<admin-privkey>@<device-pubkey>?relay=relay-url&metadata=<optional nip 01 metadata>&template=<json-schema>
 ```
 
 | Param                    |  |
@@ -67,7 +67,7 @@ nostriot+admin://<admin-privkey>@<device-pubkey>?relay=relay-url&metadata=<optio
 | `device-pubkey`          | the hex encoded nostr public key of the device
 | `relay-url`              | the relay where the device is listening for `config` events (there can be multiple relay params)
 | `metadata` (optional)    | nip-01 metadata used for visualization purposes (eg. to show the device name in the UI)
-| `template`               | a JSON template that must be used to compose the `config` event
+| `json-schema`            | a [JSON-schema](https://json-schema.org/) template that defines the structure of the configuration event content
 
 **Event Content**:
 ```json
@@ -131,39 +131,38 @@ The event must be tagged with `d`,`group_id` and `client`,`nostriot` and its con
 
 ```
 {
-    'name': 'Smart light', // name of the device
+    'title': 'Smart light', // name of the device
     'picture': '', // url to a icon of the device (optional)
     'description': '', // a brief description of what the device does (optional)
     'actions': {  // a key-value map of actions that can be performed on the device
         'turn_on': { // key is the id of the action
-            'name': 'Tun on the light', // name of the action (optional)
+            'title': 'Tun on the light', // name of the action (optional)
             'picture': '', // url to a icon of the action (optional)
             'description': '', // a brief description of what the action does (optional)
-            'inputs': { // input template for the intent event (see Input/Output templates)
-                'color': { // key is the id of the input
-                    'name': 'Color', // name of the input (optional)
-                    'type': 'string', // type of the input 
-                    'description': '', // a brief description of the input (optional)
-                    'required': true, // if the input is required
-                    'defaultValue': '#ffffff' // default value of the input (optional),
-                    'choices': null // list of choices for the input (optional)
+            'inputs': { // json-schema representing the input template for the intent event (see [json-schema](https://json-schema.org/))
+                'type': 'object',
+                'properties': {
+                    'color': { // key is the id of the input
+                        'title': 'Color', // name of the input (optional)
+                        'type': 'string', // type of the input 
+                        'description': '', // a brief description of the input (optional)
+                        'default': '#ffffff' // default value of the input (optional),
+                    },
                 }
+                'required': ['color'] // list of required inputs
             },
-            'outputs': { // output template for the data event (see Input/Output templates)
-                'status': { // key is the id of the output
-                    'name': 'Status', // name of the output (optional)
-                    'type': 'string', // type of the output 
-                    'description': '', // a brief description of the output (optional)
-                    'required': true, // if the output is required
-                    'defaultValue': 'on' // default value of the output (optional),
-                    'choices': {
-                        'maxSelection': 1, // maximum number of choices that can be selected
-                        'options': { // a key-value map of choices 
-                            'Turn on the light' 'on',
-                            'Turn off the light' 'off'
-                        }
+            'outputs': { // json-schema representing the output template for the data event content (see [json-schema](https://json-schema.org/))
+                'type': 'object',
+                'properties': {
+                    'status': { // key is the id of the output
+                        'title': 'Status', // name of the output (optional)
+                        'type': 'string', // type of the output 
+                        'description': '', // a brief description of the output (optional)
+                        'default': 'on' // default value of the output (optional),
+                        'enum': ['on', 'off'] // list of possible values for the output
                     }
-                }
+                },
+                'required': ['status'] 
             },
             'tags': [ // optional tags for this action, used for filtering
                 ['t', 'light'], 
@@ -172,29 +171,26 @@ The event must be tagged with `d`,`group_id` and `client`,`nostriot` and its con
     },
     states: { // a key-value map of states the device can publish
         'power_status': { // key is the id of the state
-            'name': 'Status', // name of the state (optional)
+            'title': 'Status', // name of the state (optional)
             'picture': '', // url to a icon of the state (optional)
             'description': '', // a brief description of what the state does (optional)
             'outputs': { // output template for the data event (see Input/Output templates)
-                'status': { // key is the id of the output
-                    'name': 'Status', // name of the output (optional)
-                    'type': 'string', // type of the output 
-                    'description': '', // a brief description of the output (optional)
-                    'required': true, // if the output is required
-                    'defaultValue': 'on' // default value of the output (optional),
-                    'choices': {
-                        'maxSelection': 1, // maximum number of choices that can be selected
-                        'options': { // a key-value map of choices 
-                            'Turn on the light' 'on',
-                            'Turn off the light' 'off'
-                        }
-                }
+                'type': 'object',
+                'properties': {
+                    'status': { // key is the id of the output
+                        'title': 'Status', // name of the output (optional)
+                        'type': 'string', // type of the output 
+                        'description': '', // a brief description of the output (optional)
+                        'default': 'on' // default value of the output (optional),
+                        'enum': ['on', 'off'] // list of possible values for the output
+                    }
+                },
+                'required': ['status'] 
             },
             'tags': [ // optional tags for this state, used for filtering
                 ['t', 'light'], 
             ]
         }
-
      }
     'relays': [], // optional list of relay that should be used to communicate with the device
     'tags': [ // optional tags for this device, used for filtering
