--- a/nip-107-2.md
+++ b/nip-107-2.md
@@ -67,7 +67,7 @@ nostriot+admin://<admin-privkey>@<device-pubkey>?relay=relay-url&metadata=<optio
 | `device-pubkey`          | the hex encoded nostr public key of the device
 | `relay-url`              | the relay where the device is listening for `config` events (there can be multiple relay params)
 | `metadata` (optional)    | nip-01 metadata used for visualization purposes (eg. to show the device name in the UI)
-| `json-schema`            | a [JSON-schema](https://json-schema.org/) template that defines the structure of the configuration event content
+| `json-schema`            | a [JSON-schema](https://json-schema.org/) template that defines the structure of the params
 
 **Event Content**:
 ```json
@@ -139,7 +139,7 @@ The event must be tagged with `d`,`group_id` and `client`,`nostriot` and its con
             'title': 'Tun on the light', // name of the action (optional)
             'picture': '', // url to a icon of the action (optional)
             'description': '', // a brief description of what the action does (optional)
-            'inputs': { // json-schema representing the input template for the intent event (see [json-schema](https://json-schema.org/))
+            'inputs': { // json-schema representing the input params template for the intent event (see [json-schema](https://json-schema.org/))
                 'type': 'object',
                 'properties': {
                     'color': { // key is the id of the input
@@ -151,7 +151,7 @@ The event must be tagged with `d`,`group_id` and `client`,`nostriot` and its con
                 }
                 'required': ['color'] // list of required inputs
             },
-            'outputs': { // json-schema representing the output template for the data event content (see [json-schema](https://json-schema.org/))
+            'outputs': { // json-schema representing the output value template for the data event (see [json-schema](https://json-schema.org/))
                 'type': 'object',
                 'properties': {
                     'status': { // key is the id of the output
@@ -174,7 +174,7 @@ The event must be tagged with `d`,`group_id` and `client`,`nostriot` and its con
             'title': 'Status', // name of the state (optional)
             'picture': '', // url to a icon of the state (optional)
             'description': '', // a brief description of what the state does (optional)
-            'outputs': { // output template for the data event (see Input/Output templates)
+            'outputs': { // json-schema representing the output value  template for the data event (see [json-schema](https://json-schema.org/))
                 'type': 'object',
                 'properties': {
                     'status': { // key is the id of the output
